# sentiric-telecom-client-sdk

./: Cargo.toml  README.md  build.rs
proto/: observer.proto
src/: auth.rs  engine.rs  lib.rs  rtp_engine.rs  stun.rs  utils.rs
src/media/: adapter.rs  hardware.rs  headless.rs  mod.rs
