[package]
name = "sentiric-telecom-client-sdk" # YENİ İSİM
version = "0.1.0"
edition = "2021"
description = "Stateful SIP/RTP Engine for Mobile and Desktop Clients."
authors = ["Sentiric Team"]
license = "AGPL-3.0"

[dependencies]
# --- THE IRON CORE (v1.5.0) ---
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", branch = "main" }
sentiric-rtp-core = { git = "https://github.com/sentiric/sentiric-rtp-core.git",  branch = "main" }

# --- Async & Logic ---
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
rand = "0.8"
thiserror = "1.0"

# --- Audio Hardware ---
cpal = "0.15"
ringbuf = "0.3"