[package]
name = "sentiric-telecom-client-sdk"
version = "0.2.5"
edition = "2021"
authors = ["Sentiric Team <dev@sentiric.ai>"]
description = "Hardened Stateful SIP/RTP Engine with Real-time Media Telemetry"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# --- THE IRON CORE ---
sentiric-rtp-core = { git = "https://github.com/sentiric/sentiric-rtp-core.git", tag = "v1.5.0" }
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.5.4" }

# --- Async & Network ---
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
rand = "0.8"
thiserror = "1.0"
chrono = "0.4"

# --- gRPC Telemetry ---
tonic = "0.12"
prost = "0.13"

# --- Audio Hardware ---
cpal = "0.15"
ringbuf = "0.3"
android_logger = "0.13"
log = "0.4"

serde_json = "1.0"

[build-dependencies]
tonic-build = "0.12"